# PALS_offline_lecroy

./: CMakeLists.txt  README.md  input.file  lf_deal.cpp
include/: fitfunction.h  getparameters.h  readfile.h  runaction.h  tools.h
src/: fitfunction.cpp  getparameters.cpp  readfile.cpp  runaction.cpp  tools.cpp
